# algo-trading

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: lint.yml
dashboard/: index.html  vite.config.ts
dashboard/src/: App.tsx  styles.css
docs/: OPERATIONS.md  QUICKSTART.md  TRADER_GUIDE.md
exports/: trades-2026-02-10.csv
profiles/: phase1.env  phase2.env  phase3.env
python_app/: README.md  pyproject.toml
python_app/algo_trading_py/: cli.py  config.py  pipeline.py  types.py
python_app/algo_trading_py/api/: server.py
python_app/algo_trading_py/auth/: server.py
python_app/algo_trading_py/backtest/: engine.py
python_app/algo_trading_py/execution/: live_kite.py  paper.py
python_app/algo_trading_py/live/: live_loop.py
python_app/algo_trading_py/market_data/: kite_historical_provider.py
python_app/algo_trading_py/monitor/: position_monitor.py
python_app/algo_trading_py/ops/: scheduler.py
python_app/algo_trading_py/persistence/: base.py  postgres.py
python_app/algo_trading_py/risk/: engine.py
python_app/algo_trading_py/screener/: service.py
python_app/algo_trading_py/signal/: builder.py
python_app/algo_trading_py/storage/: store.py
python_app/algo_trading_py/utils/: indicators.py
src/: demo.ts  index.ts  pipeline.ts  types.ts
src/auth/: server.ts
src/backtest/: engine.ts  service.ts
src/config/: profile_manager.ts
src/execution/: zerodha_adapter.ts
src/live/: live_loop.ts
src/market_data/: kite_historical_provider.ts  kite_ltp_provider.ts  (+1 more)
(+27 files in other folders)
